[gd_scene load_steps=3 format=3 uid="uid://cd0pryb0x2qft"]

[ext_resource type="Theme" uid="uid://bdwoj34kdvey4" path="res://Resources/UI/menu_theme.tres" id="1_0wv73"]
[ext_resource type="Script" path="res://Assets/Balls/main_menu.gd" id="1_w52ds"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0wv73")
script = ExtResource("1_w52ds")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -130.0
offset_top = -47.0
offset_right = 132.0
offset_bottom = 101.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
